--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
     width: 100%;
     height: 100%;
 }
@@ -19,11 +18,32 @@ body {
 .imgContainer {
     height: 300px;
     width: 300px;
-    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+}
+
+.imgContainer img {
+    width: 100%;
+    height: 100%;
 }
 
 .weatherInfo {
+    margin-left: 30px;
     height: 300px;
     width: 300px;
-    border: 1px solid orange;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.weatherInfo h3 {
+    margin-top: 0;
+}
+
+.weatherInfo p {
+    margin: 8px 0 8px 0;
+}
+
+.error {
+    background-color: red;
 }
