--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .weatherInfo {
-    margin-left: 30px;
+    padding-left: 30px;
     height: 300px;
     width: 300px;
     display: flex;
@@ -47,3 +47,60 @@ body {
 .error {
     background-color: red;
 }
+
+.inputWrapper {
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#searchInput {
+    height: 100%;
+    font-size: 1.2em;
+}
+#searchBtn {
+    position: relative;
+    background-color: darkblue;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    font-size: 1.5em;
+    border-radius: 5px;
+}
+
+#searchBtn:hover {
+    cursor: pointer;
+}
+
+.searching .buttonText {
+    visibility: hidden;
+    opacity: 0;
+    background-color: burlywood;
+}
+
+.searching::after {
+    content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 4px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+
+@keyframes button-loading-spinner {
+    from {
+      transform: rotate(0turn);
+    }
+  
+    to {
+      transform: rotate(1turn);
+    }
+  }
