--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,30 @@
 body {
     margin: 0;
+    background-color: #006466;
+    display: flex;
+    justify-content: center;
+    font-family: 'poppins', sans-serif;
 }
 .heroContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
     height: 100%;
+    max-width: 550px;
+    background-color: #144552;
+    margin-top: 10px;
+    border-radius: 10px;
 }
 
 .contentWrapper {
     display: flex;
     justify-content: center;
+    margin: 0 20px;
 }
-
+main h1 {
+    margin: 8px 0;
+}
 .imgContainer {
     height: 300px;
     width: 300px;
@@ -30,7 +40,7 @@ body {
 .weatherInfo {
     padding-left: 30px;
     height: 300px;
-    width: 300px;
+    min-width: 165px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -55,18 +65,29 @@ body {
     justify-content: space-evenly;
 }
 
+.searchField {
+    margin-bottom: 20px;
+}
 #searchInput {
     height: 100%;
     font-size: 1.2em;
 }
-#searchBtn {
+.button {
     position: relative;
     background-color: darkblue;
     color: white;
     border: none;
     padding: 5px 10px;
-    font-size: 1.5em;
     border-radius: 5px;
+}
+p .button {
+    font-size: .7em;
+    padding: 2px 5px;
+    margin-left: 5px;
+}
+#searchBtn {
+    font-size: 1.5em;
+    
 }
 
 #searchBtn:hover {
